Refactor project to migrate from @material-ui/core to @mui/material, updating imports and dependencies throughout the codebase. Enhanced package.json and package-lock.json for updated dependencies and improved project description.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "qualifier",
 	"version": "0.1.0",
-	"description": "An online platform for competitive exams, online test and practice, previous years question paper, along with proper solutions.",
+	"description": "An online platform for competitive exams, online test series and practice, previous years question paper, along with proper solutions.",
 	"keywords": [
 		"online test series",
 		"practice",
@@ -9,26 +9,23 @@
 		"government jobs"
 	],
 	"dependencies": {
-		"@ckeditor/ckeditor5-build-classic": "^16.0.0",
-		"@ckeditor/ckeditor5-react": "^2.1.0",
-		"@material-ui/core": "^4.10.1",
-		"@material-ui/lab": "^4.0.0-alpha.55",
-		"@pqina/flip": "^1.7.5",
-		"axios": "^0.19.2",
-		"chart.js": "^4.4.3",
-		"contentful": "^7.14.4",
-		"infinite-react-carousel": "^1.2.11",
-		"react": "^16.13.1",
-		"react-chartjs-2": "^5.2.0",
-		"react-dom": "^16.13.1",
-		"react-helmet": "^6.1.0",
-		"react-html-parser": "^2.0.2",
-		"react-icons": "^3.10.0",
-		"react-particles-js": "^2.7.1",
-		"react-responsive-carousel": "^3.2.7",
-		"react-router-dom": "^5.2.0",
-		"react-scripts": "^3.4.1",
-		"typewriter-effect": "^2.13.1"
+		"@emotion/react": "^11.14.0",
+		"@emotion/styled": "^11.14.0",
+		"@mui/icons-material": "^7.0.1",
+		"@mui/material": "^7.0.1",
+		"@pqina/flip": "^1.8.4",
+		"axios": "^1.8.4",
+		"chart.js": "^4.4.8",
+		"contentful": "^11.5.12",
+		"react": "^18.3.1",
+		"react-chartjs-2": "^5.3.0",
+		"react-dom": "^18.3.1",
+		"react-helmet-async": "^2.0.4",
+		"react-icons": "^5.5.0",
+		"react-responsive-carousel": "^3.2.23",
+		"react-router-dom": "^7.4.1",
+		"react-scripts": "^5.0.1",
+		"typewriter-effect": "^2.21.0"
 	},
 	"proxy": "http://localhost:2040",
 	"scripts": {
