--- a/package.json
+++ b/package.json
@@ -13,18 +13,24 @@
 		"@emotion/styled": "^11.14.0",
 		"@mui/icons-material": "^7.0.1",
 		"@mui/material": "^7.0.1",
+		"@mui/styles": "^6.4.8",
 		"@pqina/flip": "^1.8.4",
 		"axios": "^1.8.4",
+		"buffer": "^6.0.3",
 		"chart.js": "^4.4.8",
 		"contentful": "^11.5.12",
+		"html-react-parser": "^5.2.3",
 		"react": "^18.3.1",
 		"react-chartjs-2": "^5.3.0",
 		"react-dom": "^18.3.1",
 		"react-helmet-async": "^2.0.4",
+		"react-html-parser": "^2.0.2",
 		"react-icons": "^5.5.0",
 		"react-responsive-carousel": "^3.2.23",
 		"react-router-dom": "^7.4.1",
 		"react-scripts": "^5.0.1",
+		"react-tsparticles": "^2.12.2",
+		"tsparticles": "^3.8.1",
 		"typewriter-effect": "^2.21.0"
 	},
 	"proxy": "http://localhost:2040",
