--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
 	},
 	"proxy": "http://localhost:2040",
 	"scripts": {
-		"start": "cross-env NODE_OPTIONS=--openssl-legacy-provider react-scripts start",
+		"start": "react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject"
