Update API endpoints in package.json and App component to use production URLs. Enhance SeriesList component with error handling and loading states, and improve Blog component to manage loading and error states effectively. Refactor About page layout for better user experience and add charity section with a call to action.

--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
 		"tsparticles": "^3.8.1",
 		"typewriter-effect": "^2.21.0"
 	},
-	"proxy": "http://localhost:2040",
+	"proxy": "https://practice-api.riskhawk.in",
 	"scripts": {
 		"start": "react-scripts start",
 		"build": "react-scripts build",
