Update API proxy settings to use localhost for development, refactor App component to switch axios base URL, and enhance AdminRoutes with new routes for reviews and website images. Add image handling and review management features in AddReview and AddCategory components, improving user experience and functionality.

--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
 		"tsparticles": "^3.8.1",
 		"typewriter-effect": "^2.21.0"
 	},
-	"proxy": "https://practice-api.riskhawk.in",
+	"proxy": "http://localhost:2040",
 	"scripts": {
 		"start": "react-scripts start",
 		"build": "react-scripts build",
