--- a/package.json
+++ b/package.json
@@ -21,12 +21,17 @@
 		"buffer": "^6.0.3",
 		"chart.js": "^4.4.8",
 		"contentful": "^11.5.12",
+		"draft-js": "^0.11.7",
+		"draftjs-to-html": "^0.9.1",
 		"html-react-parser": "^5.2.3",
+		"html-to-draftjs": "^1.5.0",
 		"react": "^18.3.1",
 		"react-chartjs-2": "^5.3.0",
 		"react-dom": "^18.3.1",
+		"react-draft-wysiwyg": "^1.15.0",
 		"react-helmet-async": "^2.0.4",
 		"react-icons": "^5.5.0",
+		"react-quill": "^2.0.0",
 		"react-responsive-carousel": "^3.2.23",
 		"react-router-dom": "^7.4.1",
 		"react-scripts": "^5.0.1",
