--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,28 +1,32 @@
 {
 	"short_name": "Qualifier",
-	"name": "Qualifier | Online Practice & Test Series",
+	"name": "Test Platform",
 	"description": "An online TEST, Practice & Learning platform for Indian school and college Students including Government Exams, Placement Papers & CBSC Exams and much more. Try Qualifier FOR FREE.",
 	"icons": [
 		{
-			"src": "https://res.cloudinary.com/qualifier/image/upload/v1586850436/Default/Qualifier_128x128_ycrstr.svg",
-			"sizes": "128x128",
-			"type": "image/svg"
-		},
-		{
-			"src": "https://res.cloudinary.com/qualifier/image/upload/v1586866487/Default/Qualifier_144x144_m33flw.svg",
-			"sizes": "144x144",
-			"type": "image/svg"
-		},
-		{
-			"src": "https://res.cloudinary.com/qualifier/image/upload/v1586850258/Default/Qualifier-192_x_192_rezfll.svg",
+			"src": "/icons/android-chrome-192x192.png",
 			"sizes": "192x192",
-			"type": "image/svg"
+			"type": "image/png"
 		},
-
 		{
-			"src": "https://res.cloudinary.com/qualifier/image/upload/v1586850713/Default/Qualifier_512x512_khsquw.svg",
+			"src": "/icons/android-chrome-512x512.png",
 			"sizes": "512x512",
-			"type": "image/svg"
+			"type": "image/png"
+		},
+		{
+			"src": "/icons/apple-touch-icon.png",
+			"sizes": "180x180",
+			"type": "image/png"
+		},
+		{
+			"src": "/icons/favicon-16x16.png",
+			"sizes": "16x16",
+			"type": "image/png"
+		},
+		{
+			"src": "/icons/favicon-32x32.png",
+			"sizes": "32x32",
+			"type": "image/png"
 		}
 	],
 	"start_url": "/dashboard",
